--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="src/frontend/css/components/entities/folder.css">
     <link rel="stylesheet" href="src/frontend/css/components/entities/task.css">
     <link rel="stylesheet" href="src/frontend/css/components/entities/flashcard.css">
+    <link rel="stylesheet" href="src/frontend/css/components/entities/milestone.css">
     <link rel="stylesheet" href="src/frontend/css/general/dialog.css">
     <link rel="stylesheet" href="src/frontend/css/general/themes.css">
     <link rel="stylesheet" href="src/frontend/css/general/animation.css">
@@ -45,10 +46,12 @@
     <link rel="stylesheet" href="src/frontend/css/components/lists/lists.css">
     <link rel="stylesheet" href="src/frontend/css/components/buttons/buttons.css">
     <link rel="stylesheet" href="src/frontend/css/components/pageBlocks/pageBlocks.css">
+    <link rel="stylesheet" href="src/frontend/css/modals/milestoneModal.css">
     <!-- CDN for the icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Neutron</title>
+    
     <script src="src/frontend/js/components/lists/listItem1.js"></script>
     <script type="module" src="src/frontend/js/components/entities/folder.js"></script>
     <script src="src/frontend/js/components/buttons/previousViewButton.js"></script>
@@ -57,6 +60,7 @@
     <script type="module" src="src/frontend/js/components/entities/task.js"></script>
     <script type="module" src="src/frontend/js/components/entities/flashcardDeck.js"></script>
     <script type="module" src="src/frontend/js/components/pageBlocks/pageBlocks.js"></script>
+    <script type="module" src="src/frontend/js/components/entities/milestone.js"></script>
 </head>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
@@ -67,9 +71,9 @@
         <div class="sidebar-logo">
             <div class="logo-container">
                 <div class="logo">
-                    <span>N</span>
+                    <span>P</span>
                 </div>
-                <div class="logo-text">eutron</div>
+                <div class="logo-text">hoton</div>
             </div>
         </div>
         <div class="sidebar-content">
