final design for the notes view

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     
     <script src="src/frontend/js/components/lists/listItem1.js"></script>
     <script type="module" src="src/frontend/js/components/entities/folder.js"></script>
+    <script type="module" src="src/frontend/js/components/entities/note.js"></script>
+    <script type="module" src="src/frontend/js/components/entities/template.js"></script>
     <script src="src/frontend/js/components/buttons/previousViewButton.js"></script>
     <script type="module" src="src/frontend/js/components/entities/stickyNote.js"></script>
     <script type="module" src="src/frontend/js/components/entities/notebookItem.js"></script>
