Removed dead code

--- a/src/frontend/frontend_playground/test4.html
+++ b/src/frontend/frontend_playground/test4.html
@@ -9,11 +9,18 @@
 
     <title>Document</title>
 </head>
+<style>
+    body {
+        padding: 20%;
+    }
+</style>
 <body style="background-color: rgb(255, 255, 255);">
-    <div class="notification-card" dropzone="true">
-        <i class="fa-solid fa-folder-open"></i>
-        <h3 class="notification-message-title">Nothing here</h3>
-        <p class="notitication-message">There is no content in this folder.</p>
+    <div class="notification-card">
+        <div>
+            <div class="dot"></div>
+            <p class="notification-title">Added note successful</p>
+        </div>        
+        <p class="notitication-message">Docker syntax has been added.</p>
     </div>
     
 </body>
