--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="src/frontend/css/general/main.css">
     <link rel="stylesheet" href="src/frontend/css/components/entities/note.css">
     <link rel="stylesheet" href="src/frontend/css/components/entities/folder.css">
-    <link rel="stylesheet" href="src/frontend/css/components/entities/task.css">
     <link rel="stylesheet" href="src/frontend/css/components/entities/flashcard.css">
-    <link rel="stylesheet" href="src/frontend/css/components/entities/milestone.css">
     <link rel="stylesheet" href="src/frontend/css/general/dialog.css">
     <link rel="stylesheet" href="src/frontend/css/general/themes.css">
     <link rel="stylesheet" href="src/frontend/css/general/animation.css">
@@ -25,7 +23,6 @@
     <link rel="stylesheet" href="src/frontend/css/modals/searchModal.css">
     <link rel="stylesheet" href="src/frontend/css/modals/editFolderModal.css">
     <link rel="stylesheet" href="src/frontend/css/modals/newDeckModal.css">
-    <link rel="stylesheet" href="src/frontend/css/textEditor/textBlocks.css">
     <link rel="stylesheet" href="src/frontend/css/views/flashcard/flashcardHomeView.css">
     <link rel="stylesheet" href="src/frontend/css/views/home/homeView.css">
     <link rel="stylesheet" href="src/frontend/css/views/note/notesView.css">
@@ -36,20 +33,21 @@
     <link rel="stylesheet" href="src/frontend/css/views/flashcard/flashcardEditView.css">
     <link rel="stylesheet" href="src/frontend/css/views/sticky_note/stickyWallView.css">
     <link rel="stylesheet" href="src/frontend/css/modals/stickyNoteModal.css">
-    <link rel="stylesheet" href="src/frontend/css/views/taskboard/taskboardHomeView.css">
-    <link rel="stylesheet" href="src/frontend/css/views/taskboard/taskboardView.css">
     <link rel="stylesheet" href="src/frontend/css/modals/newCollectionModal.css">
-    <link rel="stylesheet" href="src/frontend/css/modals/taskModal.css">
     <link rel="stylesheet" href="src/frontend/css/general/titleBar.css">
-    <link rel="stylesheet" href="src/frontend/css/views/notebook/notebookHomeView.css">
     <link rel="stylesheet" href="src/frontend/css/views/sticky_note/stickyWallHomeView.css">
     <link rel="stylesheet" href="src/frontend/css/components/lists/lists.css">
     <link rel="stylesheet" href="src/frontend/css/components/buttons/buttons.css">
     <link rel="stylesheet" href="src/frontend/css/components/pageBlocks/pageBlocks.css">
-    <link rel="stylesheet" href="src/frontend/css/modals/milestoneModal.css">
     <!-- CDN for the icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <!--CDN for Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@100&display=swap" rel="stylesheet">
+
     <title>Neutron</title>
     
     <script src="src/frontend/js/components/lists/listItem1.js"></script>
@@ -58,11 +56,9 @@
     <script type="module" src="src/frontend/js/components/entities/template.js"></script>
     <script src="src/frontend/js/components/buttons/previousViewButton.js"></script>
     <script type="module" src="src/frontend/js/components/entities/stickyNote.js"></script>
-    <script type="module" src="src/frontend/js/components/entities/notebookItem.js"></script>
-    <script type="module" src="src/frontend/js/components/entities/task.js"></script>
     <script type="module" src="src/frontend/js/components/entities/flashcardDeck.js"></script>
     <script type="module" src="src/frontend/js/components/pageBlocks/pageBlocks.js"></script>
-    <script type="module" src="src/frontend/js/components/entities/milestone.js"></script>
+    <script type="module" src="src/frontend/js/components/notifications/notifications.js"></script>
 </head>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
@@ -83,8 +79,6 @@
             <a href="/home" data-view="home" id="home-btn"><i class="bi bi-house"></i><span>Home</span></a>
             <a href="/notes" data-view="notes" id="notes-btn"><i class="bi bi-file-earmark"></i><span>Notes</span></a>
             <a href="/templates" data-view="templates" id="templates-btn"><i class="bi bi-file-earmark-text"></i><span>Templates</span></a>
-            <a href="/notebookHome" data-view="notebookHome" id="notebook-home-btn"><i class="bi bi-journal"></i><span>Notebooks</span></a>
-            <a href="/taskboardHome" data-view="taskboardHome" id="taskboard-home-btn"><i class="bi bi-pin"></i><span>Taskboards</span></a>
             <a href="/stickyWallHome" data-view="stickyWallHome" id="sticky-wall-home-btn"><i class="bi bi-sticky"></i><span>Stickies</span></a>
             <a href="/flashcardsHome" data-view="flashcardsHome" id="flashcards-btn"><i class="bi bi-card-text"></i><span>Flashcards</span></a>
           </div>
