--- a/src/frontend/frontend_playground/test2.html
+++ b/src/frontend/frontend_playground/test2.html
@@ -44,7 +44,7 @@
             cursor: pointer;
             border-radius: 7px;
             color: var(--text);
-            font-family: sans-serif;
+            
             width: 30px;
             height: 30px;
         }
@@ -111,10 +111,10 @@
             </div>
         </div>
       </div>
-      <p style="margin-top: 500px; color: #000000; font-family: sans-serif; font-size: 20px;">
+      <p style="margin-top: 500px; color: #000000;  font-size: 20px;">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni soluta commodi dignissimos quaerat quia reprehenderit illo repellat, voluptatum accusamus aperiam. Ad voluptatibus totam perferendis sit at dicta maxime nulla esse?
       </p>
-      <h1 style="font-family: sans-serif;">Hello world</h1>
+      <h1 style="">Hello world</h1>
     
 </body>
 </html>
