--- a/src/frontend/frontend_playground/test2.html
+++ b/src/frontend/frontend_playground/test2.html
@@ -114,7 +114,7 @@
       <p style="margin-top: 500px; color: #000000;  font-size: 20px;">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni soluta commodi dignissimos quaerat quia reprehenderit illo repellat, voluptatum accusamus aperiam. Ad voluptatibus totam perferendis sit at dicta maxime nulla esse?
       </p>
-      <h1 style="">Hello world</h1>
+      <h1>Hello world</h1>
     
 </body>
 </html>
