some styling changes

--- a/src/frontend/frontend_playground/test4.html
+++ b/src/frontend/frontend_playground/test4.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/notification/notification.css">
     <link rel="stylesheet" href="../css/general/themes.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/general/animation.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Document</title>
@@ -13,15 +15,136 @@
     body {
         padding: 20%;
     }
+
+    .wrapper {
+        font-family: sans-serif;
+        width: 400px;
+        height: 400px;
+    }
+
+    .empty-folder-message {
+        height: 100%;
+        display: grid;
+        grid-template-rows: 1fr 100px 70px;
+    }
+
+    .empty-folder-message .icons {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .empty-folder-message #floating-icon1,
+    .empty-folder-message #floating-icon2,
+    .empty-folder-message #floating-icon3,
+    .empty-folder-message #floating-icon4 {
+        position: absolute;
+        background-color: #f1f2fc;
+        color: #7e8392;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        animation: bobbing 1.5s ease-in-out infinite;
+    }
+
+    .empty-folder-message #floating-icon1 {
+        width: 35px;
+        height: 35px;
+        font-size: 23px;
+        top: 20px;
+        left: 50px;
+        animation-delay: .5s;
+    }
+
+    .empty-folder-message #floating-icon2 {
+        font-size: 20px;
+        bottom: 25px;
+        right: 55px;
+        width: 30px;
+        height: 30px;
+        animation-delay: .75s;
+    }
+
+    .empty-folder-message #floating-icon3 {
+        bottom: 55px;
+        left: 75px;
+        font-size: 17px;
+        width: 25px;
+        height: 25px;
+        animation-delay: .25s;
+    }
+
+    .empty-folder-message #floating-icon4 {
+        top: 30px;
+        right: 75px;
+        width: 25px;
+        height: 25px;
+        font-size: 15px;
+        animation-delay: 1s;
+    }
+
+    .empty-folder-message #center-icon {
+        font-size: 56px;
+        color: #484d5f;
+    }
+
+    .empty-folder-message .empty-message {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .empty-folder-message p {
+        font-size: 25px;
+        margin: 5px 0;
+        font-weight: 600;
+    }
+
+    .empty-folder-message span {
+
+    }
+
+    .empty-folder-message .emtpy-message-buttons {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        column-gap: 10px;
+    }
+
+    .emtpy-message-buttons button {
+        border: none;
+        background-color: #698aff;
+        padding: 10px;
+        border-radius: 5px;
+        color: #fff;
+    }
+
+
 </style>
 <body style="background-color: rgb(255, 255, 255);">
-    <div class="notification-card">
-        <div>
-            <div class="dot"></div>
-            <p class="notification-title">Added note successful</p>
-        </div>        
-        <p class="notitication-message">Docker syntax has been added.</p>
+
+    <div class="wrapper">
+        <div class="empty-folder-message">
+            <div class="icons">
+                <i id="center-icon" class="bi bi-folder2-open"></i>
+                <i id="floating-icon1" class="bi bi-file-earmark"></i>
+                <i id="floating-icon2" class="bi bi-file-earmark-text"></i>
+                <i id="floating-icon3" class="bi bi-sticky"></i>
+                <i id="floating-icon4" class="bi bi-image"></i>
+            </div>
+            <div class="empty-message">
+                <p>Nothing found</p>
+                <span>This folder is currently empty <br>Start by Creating a folder or note.</span>
+            </div>
+            <div class="emtpy-message-buttons">
+                <button>Create folder</button>
+                <button>Create note</button>
+            </div>
+        </div>
     </div>
-    
+
 </body>
 </html>
