--- a/src/frontend/frontend_playground/test6.html
+++ b/src/frontend/frontend_playground/test6.html
@@ -8,9 +8,140 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/general/themes.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@100&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
+<style>
+    * {
+        font-family: Poppins;
+    }
+
+    .completed-task {
+        color: #cacedf;
+        background-color: #f8f9ff;
+        text-decoration: line-through;
+    }
+
+    .checklist {
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        row-gap: 20px;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+    }
+
+    .checklist .checklist-name {
+        outline: none;
+        border: none;
+        font-size: 25px;
+    }
+
+    .checklist .tasks-count {
+        display: flex;
+        justify-content: end;
+        column-gap: 10px;
+    }
+
+    .tasks-count i {
+        color: rgb(124, 211, 124);
+    }
+
+    .checklist .tasks {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .checklist .task input {
+        transform: scale(1.5);
+        vertical-align: middle;
+    }
+
+    .checklist .task {
+        cursor: pointer;
+        padding: 10px;
+        border-radius: 7px;
+        transition: .2s;
+    }
+
+    .add-task-btn {
+        position: relative;
+        padding: 10px;
+        border-radius: 7px;
+        transition: .2s;
+    }
+
+    .add-task-btn i {
+        position: absolute;
+        top: 13px;
+        left: 13px;
+    }
+
+    .add-task-btn input {
+        width: 100%;
+        font-size: 16px;
+        outline: none;
+        border: none;
+        padding-left: 25px;
+        background-color: transparent;
+    }
+
+    .checklist .task:hover,
+    .checklist .add-task-btn:hover {
+        background-color: #f3f5ff;
+    }
+
+    .progress {
+        height: 5px;
+        border-radius: 5px;
+        background-color: rgb(236, 236, 236);
+    }
+
+    .progress__fill {
+        width: 50%;
+        height: 5px;
+        border-radius: 5px;
+        background-color: rgb(124, 211, 124);
+    }
+</style>
+
 <body>
+    <div class="checklist">
+        <input class="checklist-name" type="text" placeholder="Checklist name">
+        <span class="completion-percentage">50% Done</span>
+        <div class="progress">
+            <div class="progress__fill"></div>
+        </div>
+        <div class="tasks-section">
+            <div class="tasks-count">
+                <i class="bi bi-check-circle-fill"></i>
+                <span>3 Tasks</span>
+            </div>
+            <div class="tasks">
+                <div class="task completed-task">
+                    <input type="checkbox">
+                    <span>Backend slides</span>
+                </div>
+                <div class="task">
+                    <input type="checkbox">
+                    <span>This is a task</span>
+                </div>
+                <div class="task">
+                    <input type="checkbox">
+                    <span>This is a task</span>
+                </div>
+                <div class="add-task-btn">
+                    <i class="bi bi-plus-lg"></i>
+                    <input class="new-task-input" type="text" placeholder="Write down a task">
+                </div>
+            </div>
+        </div>
+
+
+    </div>
 
 </body>
 </html>
