--- a/src/frontend/frontend_playground/test5.html
+++ b/src/frontend/frontend_playground/test5.html
@@ -3,46 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trie Autocomplete Example</title>
+  <title>Custom Web Component - Autocomplete</title>
   <style>
-    .search-container {
+    .autocomplete-container {
       position: relative;
       display: inline-block;
     }
-    #searchBar {
-      position: absolute;
-      background: none;
-      color: black;
-      z-index: 1;
+    .autocomplete-container input[type="text"] {
+      padding: 8px;
+      font-size: 14px;
+      width: 100%;
+      border: 1px solid #ccc;
     }
-    #autocomplete {
+
+    .autocomplete-container .autocomplete-suggestion {
       position: absolute;
-      padding: 2px;  /* Adjust for alignment */
       color: lightgray;
+      font-size: 14px;
+      z-index: 1;
       pointer-events: none;
-      z-index: 0;
+      white-space: nowrap;
     }
 
-    .suggestion-item {
-    padding: 5px;
-    cursor: pointer;
+    .dropdown-items {
+      position: absolute;
+      max-height: 200px;
+      overflow-y: auto;
+      padding: 0;
+      margin: 0;
+      background: white;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      list-style: none;
+      z-index: 10;
+      display: none;
     }
 
-    .suggestion-item.highlighted {
-    background-color: #d3d3d3; /* Highlight color */
+    .dropdown-items li {
+      padding: 8px;
+      cursor: pointer;
     }
 
+    .dropdown-items li.highlighted {
+      background-color: #d3d3d3;
+    }
   </style>
 </head>
 <body>
-  <div class="search-container">
-    <input type="text" id="searchBar" placeholder="Search folders and notes" autocomplete="off" />
-    <span id="autocomplete"></span>
-  </div>
-  <div id="suggestions"></div>
 
-  <script>
-    // Define the TrieNode and Trie classes for storing folder and note names
+<autocomplete-search></autocomplete-search>
+
+<script>
+// Define TrieNode and Trie classes for storing folder and note names
 class TrieNode {
   constructor() {
     this.children = {};
@@ -89,113 +101,150 @@ class Trie {
   }
 }
 
-// Initialize Trie and add some folder/note names
-const trie = new Trie();
-const folderNames = ["Projects", "Personal", "Work", "Tasks"];
-const noteNames = ["MeetingNotes", "ShoppingList", "ProjectPlan"];
-folderNames.forEach(name => trie.insert(name));
-noteNames.forEach(name => trie.insert(name));
+// Create the Custom Web Component: autocomplete-search
+class AutocompleteSearch extends HTMLElement {
+  constructor() {
+    super();
+    this.trie = new Trie();
+    this.selectedIndex = -1;
+    this.currentSuggestions = [];
+  }
 
-// Function to get suggestions based on prefix
-function getSuggestions(prefix) {
-  return trie.searchPrefix(prefix);
-}
+  connectedCallback() {
+    this.render();
+    this.initializeTrie();
+    this.setupEventListeners();
+  }
 
-let selectedIndex = -1; // Keeps track of the currently highlighted suggestion
-let currentSuggestions = []; // Stores the current list of suggestions
+  render() {
+    this.innerHTML = `
+      <div class="autocomplete-container">
+        <input type="text" placeholder="Search..." spellcheck="false">
+        <span id="autocomplete-suggestion" class="autocomplete-suggestion"></span>
+        <ul class="dropdown-items"></ul>
+      </div>
+    `;
+  }
 
-// Event listener for search bar input
-document.getElementById("searchBar").addEventListener("input", (event) => {
-  const prefix = event.target.value;
-  currentSuggestions = getSuggestions(prefix); // Update current suggestions
-  displaySuggestions(currentSuggestions);
-  showAutoComplete(prefix, currentSuggestions);
-  selectedIndex = -1; // Reset index whenever input changes
-});
+  initializeTrie() {
+    const folderNames = ["Projects", "Personal", "Work", "Tasks"];
+    const noteNames = ["MeetingNotes", "ShoppingList", "ProjectPlan"];
+    folderNames.forEach(name => this.trie.insert(name));
+    noteNames.forEach(name => this.trie.insert(name));
+  }
 
-// Event listener for keydown events (Enter, Arrow keys)
-document.getElementById("searchBar").addEventListener("keydown", (event) => {
-  const searchBar = document.getElementById("searchBar");
+  setupEventListeners() {
+    const input = this.querySelector('input[type="text"]');
+    input.addEventListener("input", (event) => this.handleInput(event));
+    input.addEventListener("keydown", (event) => this.handleKeyDown(event));
+  }
 
-  if (event.key === "Enter") {
-    event.preventDefault();
-    if (selectedIndex >= 0 && currentSuggestions[selectedIndex]) {
-      searchBar.value = currentSuggestions[selectedIndex];
-      clearSuggestions();
-    } else if (currentSuggestions.length > 0) {
-      searchBar.value = currentSuggestions[0];
-      clearSuggestions();
+  handleInput(event) {
+    const prefix = event.target.value;
+    this.currentSuggestions = this.trie.searchPrefix(prefix);
+    this.displaySuggestions();
+    this.showAutoComplete(prefix);
+    this.selectedIndex = -1; // Reset index on input change
+  }
+
+  handleKeyDown(event) {
+    const input = this.querySelector('input[type="text"]');
+
+    if (event.key === "Enter") {
+      event.preventDefault();
+      if (this.selectedIndex >= 0 && this.currentSuggestions[this.selectedIndex]) {
+        input.value = this.currentSuggestions[this.selectedIndex];
+        this.clearSuggestions();
+      } else if (this.currentSuggestions.length > 0) {
+        input.value = this.currentSuggestions[0];
+        this.clearSuggestions();
+      }
+    }
+
+    if (event.key === "ArrowDown") {
+      event.preventDefault();
+      if (this.selectedIndex < this.currentSuggestions.length - 1) {
+        this.selectedIndex++;
+        this.updateHighlightedSuggestion();
+      }
+    }
+
+    if (event.key === "ArrowUp") {
+      event.preventDefault();
+      if (this.selectedIndex > 0) {
+        this.selectedIndex--;
+        this.updateHighlightedSuggestion();
+      } else {
+        this.selectedIndex = -1;
+        this.updateHighlightedSuggestion();
+      }
     }
   }
 
-  if (event.key === "ArrowDown") {
-    event.preventDefault();
-    if (selectedIndex < currentSuggestions.length - 1) {
-      selectedIndex++;
-      updateHighlightedSuggestion();
-    }
-  }
+  showAutoComplete(prefix) {
+    const input = this.querySelector('input[type="text"]');
+    const autocompleteSpan = this.querySelector("#autocomplete-suggestion");
+    const suggestions = this.currentSuggestions;
 
-  if (event.key === "ArrowUp") {
-    event.preventDefault();
-    if (selectedIndex > 0) {
-      selectedIndex--;
-      updateHighlightedSuggestion();
+    if (suggestions.length > 0) {
+      const firstSuggestion = suggestions[0];
+      const leftover = firstSuggestion.slice(prefix.length);
+
+      // Update the autocomplete suggestion
+      autocompleteSpan.textContent = leftover;
+
+      // Adjust the position of the suggestion span
+      const inputWidth = input.offsetWidth;
+      const prefixLength = prefix.length;
+      const context = input.selectionStart; // Position where the suggestion should start
+      autocompleteSpan.style.left = `${context * 7 + 10}px`; // Approximate pixel offset based on character length
+      autocompleteSpan.style.display = "inline"; // Ensure it is shown inside the input field
     } else {
-      selectedIndex = -1;
-      updateHighlightedSuggestion();
+      autocompleteSpan.style.display = "none"; // Hide if no suggestions
     }
   }
-});
 
-function showAutoComplete(prefix, suggestions) {
-  const autocompleteSpan = document.getElementById("autocomplete");
+  displaySuggestions() {
+    const suggestionsDiv = this.querySelector(".dropdown-items");
+    suggestionsDiv.innerHTML = ""; // Clear previous suggestions
 
-  if (suggestions.length > 0) {
-    const firstSuggestion = suggestions[0];
-    const leftover = firstSuggestion.slice(prefix.length);
-    autocompleteSpan.textContent = prefix + leftover;
-  } else {
-    autocompleteSpan.textContent = "";
-  }
-}
-
-function displaySuggestions(suggestions) {
-  const suggestionsDiv = document.getElementById("suggestions");
-  suggestionsDiv.innerHTML = ""; // Clear previous suggestions
-  suggestions.forEach((suggestion, index) => {
-    const div = document.createElement("div");
-    div.textContent = suggestion;
-    div.className = "suggestion-item";
-    if (index === selectedIndex) {
-      div.classList.add("highlighted");
-    }
-    div.addEventListener("mousedown", () => {
-      document.getElementById("searchBar").value = suggestion;
-      clearSuggestions();
+    this.currentSuggestions.forEach((suggestion, index) => {
+      const li = document.createElement("li");
+      li.textContent = suggestion;
+      if (index === this.selectedIndex) {
+        li.classList.add("highlighted");
+      }
+      li.addEventListener("mousedown", () => {
+        this.querySelector('input[type="text"]').value = suggestion;
+        this.clearSuggestions();
+      });
+      suggestionsDiv.appendChild(li);
     });
-    suggestionsDiv.appendChild(div);
-  });
+
+    suggestionsDiv.style.display = this.currentSuggestions.length > 0 ? "block" : "none";
+  }
+
+  updateHighlightedSuggestion() {
+    const suggestionItems = this.querySelectorAll(".dropdown-items li");
+    suggestionItems.forEach((item, index) => {
+      if (index === this.selectedIndex) {
+        item.classList.add("highlighted");
+      } else {
+        item.classList.remove("highlighted");
+      }
+    });
+  }
+
+  clearSuggestions() {
+    this.querySelector(".dropdown-items").innerHTML = "";
+    this.querySelector("#autocomplete-suggestion").textContent = "";
+    this.currentSuggestions = [];
+    this.selectedIndex = -1;
+  }
 }
 
-function updateHighlightedSuggestion() {
-  const suggestionItems = document.querySelectorAll(".suggestion-item");
-  suggestionItems.forEach((item, index) => {
-    if (index === selectedIndex) {
-      item.classList.add("highlighted");
-    } else {
-      item.classList.remove("highlighted");
-    }
-  });
-}
-
-function clearSuggestions() {
-  document.getElementById("suggestions").innerHTML = "";
-  document.getElementById("autocomplete").textContent = "";
-  currentSuggestions = [];
-  selectedIndex = -1;
-}
-
-  </script>
+// Define the custom element
+customElements.define('autocomplete-search', AutocompleteSearch);
+</script>
 </body>
 </html>
