--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/atom-one-dark.min.css">
     <!-- Include Highlight.js script -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
-    <title>Neutron</title>
+    <title>Photon</title>
     
     <script src="src/frontend/js/components/lists/lists.js"></script>
     <script type="module" src="src/frontend/js/components/entities/folder.js"></script>
