Working on the new sticky note UI and functionality

--- a/src/frontend/frontend_playground/test3.html
+++ b/src/frontend/frontend_playground/test3.html
@@ -145,7 +145,7 @@
     border-radius: 5px;
     padding: 10px;
     font-size: 14px;
-    background-color: #b4d6ff;
+    background-color: rgb(180, 214, 255);
   }
 
   .description {
