--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="src/frontend/css/general/sidebar.css">
     <link rel="stylesheet" href="src/frontend/css/general/main.css">
     <link rel="stylesheet" href="src/frontend/css/components/entities/note.css">
+    <link rel="stylesheet" href="src/frontend/css/components/entities/sticky.css">
     <link rel="stylesheet" href="src/frontend/css/components/entities/folder.css">
     <link rel="stylesheet" href="src/frontend/css/components/entities/flashcard.css">
     <link rel="stylesheet" href="src/frontend/css/general/dialog.css">
