--- a/src/frontend/frontend_playground/test7.html
+++ b/src/frontend/frontend_playground/test7.html
@@ -24,12 +24,53 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: rgb(218, 221, 228);
+            background-color: rgb(255, 255, 255);
+        }
+
+
+        .sticky-note-options-bar {
+            height: 70px;
+            padding: 10px 15px;
+            display: flex;
+            align-items: center;
+            border: 1px solid #ddd;
+            background-color: #fff;
+            border-radius: 5px;
+        }
+
+        .btn-group {
+            display: flex;
+            margin: 0 10px;
+            background-color: #964c4c;
+            border-radius: 20px;
+        }
+
+        .btn-group button {
+            font-size: 20px;
         }
         
     </style>
 </head>
 <body>
+    <div class="sticky-note-options-bar">
+        <div class="btn-group">
+            <button><i class="bi bi-type-h1"></i></button>
+            <button data-rich-text-option="bold"><i class="bi bi-type-bold"></i></button>
+            <button data-rich-text-option="italic"><i class="bi bi-type-italic"></i></button>
+            <button data-rich-text-option="underline"><i class="bi bi-type-underline"></i></button>
+            <button data-rich-text-option="strikethrough"><i class="bi bi-type-strikethrough"></i></button>
+            <button data-rich-text-option="createLink"><i class="bi bi-link-45deg"></i></button>
+        </div>
+        <div class="btn-group">
+            <button data-rich-text-option="insertUnorderedList"><i class="bi bi-list-task"></i></button>
+            <button data-rich-text-option="insertOrderedList"><i class="bi bi-list-ol"></i></button>
+        </div>
+        <div class="btn-group">
+            <button><i class="bi bi-paint-bucket"></i></button>
+            <button><i class="bi bi-arrows-angle-expand"></i></button>
+            <button><i class="bi bi-plus-lg"></i></button>
+        </div>
+    </div>
 
 
 </body>
