--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
                 <div class="logo">
                     <span>P</span>
                 </div>
-                <div class="logo-text">hoton</div>
+                <div class="logo-text"></div>
             </div>
         </div>
         <div class="sidebar-content">
           <div class="sidebar-content-upper">
-            <a href="/home" data-view="home" id="home-btn"><i class="bi bi-house"></i><span>Home</span></a>
-            <a href="/notes" data-view="notes" id="notes-btn"><i class="bi bi-file-earmark"></i><span>Notes</span></a>
-            <a href="/stickyWallHome" data-view="stickyWallHome" id="sticky-wall-home-btn"><i class="bi bi-sticky"></i><span>Stickies</span></a>
+            <a href="/home" data-view="home" id="home-btn"><i class="bi bi-house"></i><span></span></a>
+            <a href="/notes" data-view="notes" id="notes-btn"><i class="bi bi-file-earmark"></i><span></span></a>
+            <a href="/stickyWallHome" data-view="stickyWallHome" id="sticky-wall-home-btn"><i class="bi bi-sticky"></i><span></span></a>
           </div>
           <div class="sidebar-content-lower">
-            <a href="/settings" data-view="settings" id="settings-btn"><i class="bi bi-gear"></i><span>Settings</span></a>
+            <a href="/settings" data-view="settings" id="settings-btn"><i class="bi bi-gear"></i><span></span></a>
           </div>
         </div>
     </div>
